# kamikonn

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  kamconnect_brand_identity.md  rwanda_academic_hub_description.md
backend/: Dockerfile  Dockerfile.prod  conftest.py  manage.py  pyproject.toml
backend/apps/accounts/: adapter.py  admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/core/: models.py
backend/apps/events/: admin.py  filters.py  models.py  rsvp_serializers.py  rsvp_views.py  serializers.py  tasks.py  test_csv_import.py  test_drafts_and_upload.py  test_rsvp.py  tests.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py  0002_event.py  0003_event_event_title_trgm_idx.py  0004_alter_event_description_alter_event_end_time_and_more.py  0005_rsvp_savedevent.py
backend/apps/moderation/: models.py  serializers.py  test_moderation.py  urls.py  views.py
backend/apps/moderation/migrations/: 0001_initial.py  0002_alter_moderationlog_action.py
backend/apps/organizers/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/rsvps/: apps.py
backend/apps/universities/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/kamikonn/: asgi.py  celery.py  urls.py  wsgi.py
backend/kamikonn/settings/: __init__.py  base.py  development.py  production.py  test.py
(+95 files in other folders)
