[project]
name = "kamikonn-backend"
version = "0.1.0"
description = "KamiKonn API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2a1",
    "djangorestframework>=3.15.1",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.3.1",
    "django-filter>=24.2",
    "drf-spectacular>=0.27.2",
    "psycopg2-binary>=2.9.9",
    "celery[redis]>=5.4.0",
    "python-decouple>=3.8",
    "django-extensions>=3.2.3",
    "pillow>=10.3.0",
    "django-allauth>=65.18.0",
    "dj-rest-auth[with-social]>=7.2.0",
    "django-ratelimit>=4.1.0",
    "django-csp>=4.0",
    "nh3>=0.3.6",
    "icalendar>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.3.3",
    "pyright>=1.1.354",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kamikonn.settings.test"
python_files = ["test_*.py", "*_tests.py", "tests.py"]
addopts = "--reuse-db"

[tool.coverage.run]
omit = [
    "manage.py",
    "kamikonn/asgi.py",
    "kamikonn/wsgi.py",
    "kamikonn/settings/*",
    "kamikonn/urls.py",
    "*/migrations/*",
    "*/urls.py",
]
